@@ -274,7 +274,7 @@ class HtmlParserTestCase(HelperTestCase):
              ('end', root[1]), ('end', root)],
             events)
 
-    def _test_html_iterparse_broken(self):
+    def test_html_iterparse_broken(self):
         iterparse = self.etree.iterparse
         f = BytesIO('<head><title>TEST></head><p>P<br></div>')
 
@@ -294,7 +294,7 @@ class HtmlParserTestCase(HelperTestCase):
              ('end', root[1][0]), ('end', root[1]), ('end', root)],
             events)
 
-    def _test_html_iterparse_broken_no_recover(self):
+    def test_html_iterparse_broken_no_recover(self):
         iterparse = self.etree.iterparse
         f = BytesIO('<p>P<br></div>')
         iterator = iterparse(f, html=True, recover=False)
